[gd_scene load_steps=40 format=2]

[ext_resource path="res://scenes/menus/level_designer/menu_control.gd" type="Script" id=1]
[ext_resource path="res://scenes/menus/level_designer/ld_main.gd" type="Script" id=2]
[ext_resource path="res://scenes/menus/level_designer/ldui/ld_camera.gd" type="Script" id=3]
[ext_resource path="res://scenes/menus/level_designer/background.tres" type="Material" id=4]
[ext_resource path="res://scenes/menus/level_designer/music.gd" type="Script" id=5]
[ext_resource path="res://scenes/menus/level_designer/save_dialog.gd" type="Script" id=6]
[ext_resource path="res://scenes/menus/level_designer/ldui/top_buttons.png" type="Texture" id=7]
[ext_resource path="res://scenes/menus/level_designer/ldui/palette.png" type="Texture" id=8]
[ext_resource path="res://scenes/menus/level_designer/ldui/start_pipe.png" type="Texture" id=9]
[ext_resource path="res://scenes/menus/level_designer/ldui/start_sign.png" type="Texture" id=10]
[ext_resource path="res://scenes/menus/level_designer/ldui/big_cog.png" type="Texture" id=11]
[ext_resource path="res://scenes/menus/level_designer/ldui/hermes.tscn" type="PackedScene" id=12]
[ext_resource path="res://scenes/menus/level_designer/ldui/scroll_block_v.png" type="Texture" id=13]
[ext_resource path="res://scenes/menus/level_designer/item_pane.gd" type="Script" id=14]
[ext_resource path="res://scenes/levels/tutorial_1/bg/bg_t1.tscn" type="PackedScene" id=15]
[ext_resource path="res://scenes/menus/level_designer/start.gd" type="Script" id=16]
[ext_resource path="res://scenes/menus/level_designer/save.gd" type="Script" id=17]
[ext_resource path="res://scenes/menus/level_designer/load.gd" type="Script" id=18]
[ext_resource path="res://gui/hud/hud_shine_small.png" type="Texture" id=19]
[ext_resource path="res://gui/custom_nodes/outline_container.gd" type="Script" id=20]
[ext_resource path="res://scenes/menus/level_designer/ldui/drag_circle_hover.png" type="Texture" id=21]
[ext_resource path="res://scenes/menus/level_designer/ldui/drag_circle_selected.png" type="Texture" id=22]
[ext_resource path="res://scenes/menus/level_designer/ldui/drag_circle.png" type="Texture" id=23]
[ext_resource path="res://scenes/menus/level_designer/property_menu/property_menu.tscn" type="PackedScene" id=24]
[ext_resource path="res://scenes/menus/level_designer/dummy.png" type="Texture" id=25]
[ext_resource path="res://scenes/menus/level_designer/bg_grid.gd" type="Script" id=26]
[ext_resource path="res://scenes/menus/level_designer/open_dialog.gd" type="Script" id=27]
[ext_resource path="res://scenes/menus/level_designer/ldui/scroll_v_top.tres" type="StyleBox" id=28]
[ext_resource path="res://scenes/menus/level_designer/ldui/scroll_v_bottom.tres" type="StyleBox" id=29]
[ext_resource path="res://scenes/menus/level_designer/scroller.gd" type="Script" id=30]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 42, 30 )

[sub_resource type="StyleBoxTexture" id=2]
texture = SubResource( 1 )
region_rect = Rect2( 0, 0, 42, 30 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 7 )
region = Rect2( 42, 0, 42, 30 )

[sub_resource type="StyleBoxTexture" id=4]
texture = SubResource( 3 )
region_rect = Rect2( 0, 0, 42, 30 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 7 )
region = Rect2( 84, 0, 42, 30 )

[sub_resource type="StyleBoxTexture" id=6]
texture = SubResource( 5 )
region_rect = Rect2( 0, 0, 42, 30 )

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 10 )
region_rect = Rect2( 0, 0, 66, 65 )

[sub_resource type="StyleBoxTexture" id=8]
texture = ExtResource( 9 )
region_rect = Rect2( 0, 0, 45, 36 )

[sub_resource type="StyleBoxTexture" id=9]
texture = ExtResource( 11 )
region_rect = Rect2( 0, 0, 70, 70 )

[node name="Main" type="Node2D"]
script = ExtResource( 2 )

[node name="Camera" type="Camera2D" parent="."]
anchor_mode = 0
current = true
script = ExtResource( 3 )

[node name="Music" type="AudioStreamPlayer" parent="."]
bus = "Music"
script = ExtResource( 5 )

[node name="FadeOut" type="Tween" parent="Music"]

[node name="FadeIn" type="Tween" parent="Music"]

[node name="BGT1" parent="." instance=ExtResource( 15 )]

[node name="BGGrid" type="TextureRect" parent="BGT1"]
material = ExtResource( 4 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 25 )
stretch_mode = 2
script = ExtResource( 26 )

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="SaveDialog" type="FileDialog" parent="UILayer"]
margin_right = 315.0
margin_bottom = 130.0
popup_exclusive = true
window_title = "Save Level"
resizable = true
mode_overrides_title = false
access = 2
filters = PoolStringArray( "*.63r ; SM63 Redux Level" )
script = ExtResource( 6 )

[node name="OpenDialog" type="FileDialog" parent="UILayer"]
margin_right = 315.0
margin_bottom = 130.0
popup_exclusive = true
window_title = "Save Level"
resizable = true
mode_overrides_title = false
mode = 0
access = 2
filters = PoolStringArray( "*.63r ; SM63 Redux Level" )
script = ExtResource( 27 )

[node name="HoverUI" type="Control" parent="UILayer"]

[node name="Dragger" type="Container" parent="UILayer/HoverUI"]
visible = false
margin_left = 310.0
margin_top = 67.0
margin_right = 498.0
margin_bottom = 176.0
mouse_filter = 2
script = ExtResource( 20 )
anchor_around = PoolVector2Array( 0.5, 0, 1, 0.5, 0.5, 1, 0, 0.5, 0, 0, 0.5, 0, 1, 0, 1, 0.5, 1, 1, 0.5, 1, 0, 1, 0, 0.5, 0.5, 1, 0, 0 )
px_offset = PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 10, 0, 0 )
item_anchor = PoolVector2Array( 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0, 0.5, 0.5 )

[node name="OutlineTop" type="ColorRect" parent="UILayer/HoverUI/Dragger"]
margin_top = -1.0
margin_right = 188.0
margin_bottom = 1.0
size_flags_vertical = 0
color = Color( 0.498039, 0.247059, 0, 1 )

[node name="OutlineRight" type="ColorRect" parent="UILayer/HoverUI/Dragger"]
margin_left = 187.0
margin_right = 189.0
margin_bottom = 109.0
size_flags_horizontal = 0
color = Color( 0.498039, 0.247059, 0, 1 )

[node name="OutlineBottom" type="ColorRect" parent="UILayer/HoverUI/Dragger"]
margin_top = 108.0
margin_right = 188.0
margin_bottom = 110.0
size_flags_vertical = 0
color = Color( 0.498039, 0.247059, 0, 1 )

[node name="OutlineLeft" type="ColorRect" parent="UILayer/HoverUI/Dragger"]
margin_left = -1.0
margin_right = 1.0
margin_bottom = 109.0
size_flags_horizontal = 0
color = Color( 0.498039, 0.247059, 0, 1 )

[node name="TopLeft" type="TextureButton" parent="UILayer/HoverUI/Dragger"]
margin_left = -6.0
margin_top = -6.0
margin_right = 6.0
margin_bottom = 6.0
size_flags_horizontal = 0
size_flags_vertical = 0
action_mode = 0
texture_normal = ExtResource( 23 )
texture_pressed = ExtResource( 22 )
texture_hover = ExtResource( 21 )
expand = true

[node name="TopMiddle" type="TextureButton" parent="UILayer/HoverUI/Dragger"]
margin_left = 88.0
margin_top = -6.0
margin_right = 100.0
margin_bottom = 6.0
size_flags_horizontal = 0
size_flags_vertical = 0
action_mode = 0
texture_normal = ExtResource( 23 )
texture_pressed = ExtResource( 22 )
texture_hover = ExtResource( 21 )
expand = true

[node name="TopRight" type="TextureButton" parent="UILayer/HoverUI/Dragger"]
margin_left = 182.0
margin_top = -6.0
margin_right = 194.0
margin_bottom = 6.0
size_flags_horizontal = 0
size_flags_vertical = 0
action_mode = 0
texture_normal = ExtResource( 23 )
texture_pressed = ExtResource( 22 )
texture_hover = ExtResource( 21 )
expand = true

[node name="MiddleRight" type="TextureButton" parent="UILayer/HoverUI/Dragger"]
margin_left = 182.0
margin_top = 48.5
margin_right = 194.0
margin_bottom = 60.5
size_flags_horizontal = 0
size_flags_vertical = 0
action_mode = 0
texture_normal = ExtResource( 23 )
texture_pressed = ExtResource( 22 )
texture_hover = ExtResource( 21 )
expand = true

[node name="BottomRight" type="TextureButton" parent="UILayer/HoverUI/Dragger"]
margin_left = 182.0
margin_top = 103.0
margin_right = 194.0
margin_bottom = 115.0
size_flags_horizontal = 0
size_flags_vertical = 0
action_mode = 0
texture_normal = ExtResource( 23 )
texture_pressed = ExtResource( 22 )
texture_hover = ExtResource( 21 )
expand = true

[node name="BottomMiddle" type="TextureButton" parent="UILayer/HoverUI/Dragger"]
margin_left = 88.0
margin_top = 103.0
margin_right = 100.0
margin_bottom = 115.0
size_flags_horizontal = 0
size_flags_vertical = 0
action_mode = 0
texture_normal = ExtResource( 23 )
texture_pressed = ExtResource( 22 )
texture_hover = ExtResource( 21 )
expand = true

[node name="BottomLeft" type="TextureButton" parent="UILayer/HoverUI/Dragger"]
margin_left = -6.0
margin_top = 103.0
margin_right = 6.0
margin_bottom = 115.0
size_flags_horizontal = 0
size_flags_vertical = 0
action_mode = 0
texture_normal = ExtResource( 23 )
texture_pressed = ExtResource( 22 )
texture_hover = ExtResource( 21 )
expand = true

[node name="MiddleLeft" type="TextureButton" parent="UILayer/HoverUI/Dragger"]
margin_left = -6.0
margin_top = 48.5
margin_right = 6.0
margin_bottom = 60.5
size_flags_horizontal = 0
size_flags_vertical = 0
action_mode = 0
texture_normal = ExtResource( 23 )
texture_pressed = ExtResource( 22 )
texture_hover = ExtResource( 21 )
expand = true

[node name="SelectionControl" type="ColorRect" parent="UILayer/HoverUI/Dragger"]
margin_left = 24.0
margin_top = 119.0
margin_right = 164.0
margin_bottom = 169.0
size_flags_horizontal = 0
size_flags_vertical = 0
color = Color( 0.92549, 0.494118, 0.305882, 1 )

[node name="Move" type="TextureButton" parent="UILayer/HoverUI/Dragger/SelectionControl"]
margin_left = 5.0
margin_top = 5.0
margin_right = 45.0
margin_bottom = 45.0
texture_normal = ExtResource( 19 )
expand = true

[node name="Idk1" type="TextureButton" parent="UILayer/HoverUI/Dragger/SelectionControl"]
margin_left = 50.0
margin_top = 5.0
margin_right = 90.0
margin_bottom = 45.0
texture_normal = ExtResource( 19 )
expand = true

[node name="Idk2" type="TextureButton" parent="UILayer/HoverUI/Dragger/SelectionControl"]
margin_left = 95.0
margin_top = 5.0
margin_right = 135.0
margin_bottom = 45.0
texture_normal = ExtResource( 19 )
expand = true

[node name="LDUI" type="Control" parent="UILayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
script = ExtResource( 1 )

[node name="TopBar" type="Control" parent="UILayer/LDUI"]
anchor_right = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="UILayer/LDUI/TopBar"]
show_behind_parent = true
margin_right = 136.0
margin_bottom = 32.0
color = Color( 0.223529, 0.0941176, 0, 1 )

[node name="File" type="Button" parent="UILayer/LDUI/TopBar"]
margin_right = 42.0
margin_bottom = 30.0
custom_styles/normal = SubResource( 2 )
script = ExtResource( 17 )

[node name="Mode" type="Button" parent="UILayer/LDUI/TopBar"]
margin_left = 46.0
margin_right = 88.0
margin_bottom = 30.0
custom_styles/normal = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="Button" parent="UILayer/LDUI/TopBar"]
margin_left = 92.0
margin_right = 134.0
margin_bottom = 30.0
custom_styles/normal = SubResource( 6 )
script = ExtResource( 18 )

[node name="ItemPane" type="Control" parent="UILayer/LDUI"]
anchor_bottom = 1.0
margin_top = 32.0
margin_right = 96.0
script = ExtResource( 14 )

[node name="ItemScrollBar" type="ColorRect" parent="UILayer/LDUI/ItemPane"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 82.0
color = Color( 0.231373, 0.117647, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollRegion" type="Control" parent="UILayer/LDUI/ItemPane/ItemScrollBar"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 4.0
margin_bottom = -93.0

[node name="StopperTop" type="TextureRect" parent="UILayer/LDUI/ItemPane/ItemScrollBar/ScrollRegion"]
margin_left = 2.0
margin_top = -2.0
margin_right = 12.0
margin_bottom = 3.0
texture = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StopperBottom" type="TextureRect" parent="UILayer/LDUI/ItemPane/ItemScrollBar/ScrollRegion"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = -3.0
margin_right = 12.0
margin_bottom = 2.0
texture = ExtResource( 13 )
flip_v = true

[node name="Scroller" type="Control" parent="UILayer/LDUI/ItemPane/ItemScrollBar/ScrollRegion"]
anchor_right = 1.0
margin_left = 2.0
margin_right = -2.0
margin_bottom = 60.0
script = ExtResource( 30 )

[node name="ScrollerTop" type="Panel" parent="UILayer/LDUI/ItemPane/ItemScrollBar/ScrollRegion/Scroller"]
anchor_right = 1.0
anchor_bottom = 0.5
rect_min_size = Vector2( 10, 15 )
custom_styles/panel = ExtResource( 28 )

[node name="ScrollerBottom" type="Panel" parent="UILayer/LDUI/ItemPane/ItemScrollBar/ScrollRegion/Scroller"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 10, 15 )
custom_styles/panel = ExtResource( 29 )

[node name="ItemBlock" type="ColorRect" parent="UILayer/LDUI/ItemPane"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -14.0
color = Color( 0.141176, 0.52549, 0.47451, 1 )

[node name="ItemDisplay" type="Control" parent="UILayer/LDUI/ItemPane/ItemBlock"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_top = 3.0
margin_right = -3.0
margin_bottom = -93.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="ColorRect" parent="UILayer/LDUI/ItemPane/ItemBlock/ItemDisplay"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.231373, 0.117647, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Base" type="ColorRect" parent="UILayer/LDUI/ItemPane/ItemBlock/ItemDisplay/Back"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 1.0
margin_right = -1.0
margin_bottom = -1.0
rect_clip_content = true
color = Color( 0.168627, 0.290196, 0.239216, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemGrid" type="GridContainer" parent="UILayer/LDUI/ItemPane/ItemBlock/ItemDisplay/Back/Base"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_top = 3.0
margin_right = -3.0
margin_bottom = -3.0
custom_constants/vseparation = 4
custom_constants/hseparation = 4
columns = 2

[node name="Palette" type="TextureRect" parent="UILayer/LDUI"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -90.0
margin_right = 91.0
texture = ExtResource( 8 )

[node name="StartButtons" type="Control" parent="UILayer/LDUI"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="UILayer/LDUI/StartButtons"]
margin_left = -66.0
margin_top = -65.0
custom_styles/normal = SubResource( 7 )
script = ExtResource( 16 )

[node name="FromPos" type="Button" parent="UILayer/LDUI/StartButtons"]
margin_left = -111.0
margin_top = -36.0
margin_right = -66.0
custom_styles/normal = SubResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cog" type="Button" parent="UILayer/LDUI"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -48.0
margin_top = -22.0
margin_right = 22.0
margin_bottom = 48.0
custom_styles/normal = SubResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hermes" parent="UILayer/LDUI" instance=ExtResource( 12 )]
position = Vector2( 278, 353.5 )
z_index = -1

[node name="PropertyMenu" parent="UILayer" instance=ExtResource( 24 )]
visible = false

[connection signal="selection_changed" from="." to="UILayer/LDUI" method="_selection_changed"]
[connection signal="selection_size_changed" from="." to="UILayer/LDUI" method="_selection_size_changed"]
[connection signal="finished" from="Music" to="Music" method="_on_Music_finished"]
[connection signal="tween_completed" from="Music/FadeOut" to="Music" method="_on_FadeOut_tween_completed"]
[connection signal="file_selected" from="UILayer/SaveDialog" to="UILayer/SaveDialog" method="_on_SaveDialog_file_selected"]
[connection signal="file_selected" from="UILayer/OpenDialog" to="UILayer/OpenDialog" method="_on_OpenDialog_file_selected"]
[connection signal="pressed" from="UILayer/LDUI/TopBar/File" to="UILayer/LDUI/TopBar/File" method="_on_File_pressed"]
[connection signal="pressed" from="UILayer/LDUI/TopBar/Mode" to="UILayer/LDUI" method="_on_terrain_control_place_pressed"]
[connection signal="pressed" from="UILayer/LDUI/TopBar/Options" to="UILayer/LDUI/TopBar/Options" method="_on_Open_pressed"]
[connection signal="gui_input" from="UILayer/LDUI/ItemPane" to="UILayer/LDUI/ItemPane" method="_on_LeftBar_gui_input"]
[connection signal="pressed" from="UILayer/LDUI/StartButtons/Start" to="UILayer/LDUI/StartButtons/Start" method="_on_Start_pressed"]
